# CaptionFlow

./: .gitignore  README.md  pyproject.toml
docs/: README.md  cli-reference.md  pipeline.md
src/captionflow/: __init__.py  captions.py  cli.py  config.py  constants.py  deepgram_client.py  discovery.py  errors.py  ffmpeg_ops.py  models.py  pipeline.py  progress.py
tests/: test_batch.py  test_captions.py  test_cli.py  test_deepgram_client.py  test_pipeline.py
