[project]
name = "captionflow"
version = "0.1.0"
description = "CLI tool that transcribes video audio with DeepGram and generates SRT/WebVTT subtitle files"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "deepgram-sdk>=3.0",
    "deepgram-captions>=1.0",
]

[project.scripts]
captionflow = "captionflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/captionflow"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
